--- a/User/UserInfo/UserInfo/UserInfo.csproj
+++ b/User/UserInfo/UserInfo/UserInfo.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Distric\Edit.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
